ccv/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kirchhoff
  labels:
    app.kubernetes.io/part-of: kirchhoff
